rt/rs: fix PMD rule: UnusedAssignment